--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7c66f9b20670cd7cf743e50e61c6323dad25645373fd13a9b6b5e6bb83c6527e"
+  "signature": "sha256:7db9b2635af19c9defe1074b3b66e7df99c772b532c52b74a4a6927a7dc090af"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -246,6 +246,8 @@
       "    baryVels=np.load('npy/baryVels.npy')\n",
       "    JDs=np.load('npy/JDs.npy')\n",
       "    \n",
+      "#     order = np.argsort(np.nanstd(RVs,axis=1),axis=0)\n",
+      "#     np.save('npy/order.npy',order)\n",
       "    \n",
       "    X = JDs\n",
       "    Y = RVs\n",
@@ -261,13 +263,13 @@
       "    colors = ['b','g','r','cyan']\n",
       "    labels = ['Blue','Green','Red','IR']\n",
       "    \n",
-      "    try:\n",
-      "        order=np.load('order.npy')\n",
-      "    except:\n",
-      "        pass\n",
+      "#     try:\n",
+      "#         order=np.load('order.npy')\n",
+      "#     except:\n",
+      "#         pass\n",
       "    \n",
       "    if topStars==-1:\n",
-      "        print 'Including all stars'\n",
+      "        print 'Including all stars',Y.shape[0]\n",
       "        topStars = Y.shape[0]\n",
       "        \n",
       "#     if len(fileList)>0:\n",
@@ -286,32 +288,57 @@
       "    for cam in range(4)[:]:\n",
       "        for i in range(topStars)[:]:\n",
       "            #Plots RVs, baryvels. Single star, 4 cameras\n",
+      "            \n",
+      "#             fig = plt.figure()\n",
+      "#             ax1 = fig.add_subplot(111)\n",
+      "            \n",
       "            if title=='':\n",
       "                plt.title('RV - '+str(topStars)+'/'+str(RVs.shape[0])+' - '+labels[cam]+' camera')\n",
       "            else:\n",
-      "                plt.title(title)\n",
+      "                plt.title(title, y=1.1)\n",
       "            \n",
       "\n",
-      "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam], fmt='.', label = labels[cam], color = colors[cam])\n",
-      "            plt.scatter(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
-      "            \n",
-      "        \n",
-      "        \n",
-      "    #sine plot\n",
-      "#     start_day = 56889.000000 # The Julian date for CE  2014 August 20 00:00:00.0 UT  (10am australia)\n",
-      "#     end_day = 56895.000000 #The Julian date for CE  2014 August 26 00:00:00.0 UT (10am australia)\n",
-      "#     days = np.linspace(start_day, end_day) \n",
-      "#     K1=26100\n",
-      "#     peri_time = 19298.85\n",
-      "#     P=4.8202\n",
-      "#     peri_arg=269.3\n",
-      "#     RV = K1* np.sin( (days-peri_time)/P*2*np.pi - peri_arg/360*2*np.pi )\n",
-      "#     plt.plot(days, RV, linewidth = 1, label = 'rhoTuc' )\n",
+      "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam]*1000, fmt='.', label = labels[cam], color = colors[cam])\n",
+      "            if booBaryCorrect==True: \n",
+      "                plt.scatter(X, Y[i,:,cam]- baryVels, label = labels[cam], color = colors[cam])\n",
+      "            else:\n",
+      "                plt.scatter(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
       "\n",
-      "        if booBaryPlot==True: plt.plot(X, baryVels, label = 'Barycentric Vel. ')\n",
+      "#             plt.plot(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
+      "#             plt.scatter(X, Y[i,:,cam], label = labels[cam], color = 'k')\n",
+      "\n",
+      "#             print 'RV', Y[i,:,cam]\n",
+      "#             print 'X', X\n",
+      "#             print 'bary', baryVels\n",
+      "#             print 'RV-bary median', np.median(Y[i,:,cam]-baryVels)\n",
+      "#             print 'RV-bary std', np.std(Y[i,:,cam]-baryVels)\n",
+      "        \n",
+      "        \n",
+      "        #sine plot\n",
+      "#         start_day = 56889.000000 # The Julian date for CE  2014 August 20 00:00:00.0 UT  (10am australia)\n",
+      "#         end_day = 56895.000000 #The Julian date for CE  2014 August 26 00:00:00.0 UT (10am australia)\n",
+      "#         days = np.linspace(start_day, end_day) \n",
+      "#         K1=26100\n",
+      "#         peri_time = 19298.85\n",
+      "#         P=4.8202\n",
+      "#         peri_arg=269.3\n",
+      "#         RV = K1* np.sin( (days-peri_time)/P*2*np.pi - peri_arg/360*2*np.pi )\n",
+      "#         plt.plot(days, RV, linewidth = 1, label = 'rhoTuc' )\n",
+      "\n",
+      "        if booBaryPlot==True: plt.plot(X, baryVels, 'k--', label = 'Barycentric Vel.')\n",
+      "\n",
+      "#         plt.tight_layout()\n",
       "\n",
       "        plt.xlabel('MJD')\n",
       "        plt.ylabel('RV [m/s]')\n",
+      "        \n",
+      "        \n",
+      "#         ax2 = ax1.twiny()\n",
+      "#         ax2.set_xticks(X-X[0])\n",
+      "#         ax2.set_xticklabels(range(len(X)))\n",
+      "#         ax2.set_xlabel('Epoch')\n",
+      "        \n",
+      "\n",
       "    #     plt.legend(loc=0)\n",
       "        if booSave==True: \n",
       "            try:\n",
@@ -328,7 +355,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -626,46 +654,47 @@
       "    for cam in range(RVs.shape[2])[:]:\n",
       "        for epoch in range(RVs.shape[1])[:]:\n",
       "            for star in range(RVs.shape[0])[:]:\n",
-      "                if np.abs(RVs[star,epoch,cam])>RVref:\n",
-      "                    i+=1\n",
-      "                    print i, RVs[star,epoch,cam],data[star]\n",
-      "                    fileName = 'red_'+data[star,0]+'.obj'\n",
-      "                    print 'Ploting fluxes from', fileName \n",
-      "                    filehandler = open('obj/'+fileName, 'r')\n",
-      "                    thisStar = pickle.load(filehandler)\n",
-      "                    \n",
-      "                    lambda1,flux1, lambda2,flux2, CCCurve, p, x_mask, RV = RVTools.single_RVs_CC_t0(thisStar, cam = cam, t = epoch)\n",
-      "                    \n",
-      "                    plt.subplot(2,1,1)\n",
-      "                    plt.title(thisStar.name +' '+ labels[cam]+' Original Fluxes - RV='+str(RV))\n",
-      "                    plt.plot(lambda1,flux1, label='t0')\n",
-      "                    plt.plot(lambda2,flux2, label='t'+str(epoch))\n",
-      "                    plt.legend(loc=0)\n",
-      "                    plt.subplot(2,1,2)\n",
-      "                    plt.title('Cross Correlation')\n",
-      "                    plt.plot(CCCurve/np.max(CCCurve), label='CC Curve')\n",
-      "                    plt.plot(x_mask,RVTools.gaussian(x_mask, p[0], p[1] ), label='Gaussian fit', c='r')\n",
-      "                    plt.legend(loc=0)        \n",
-      "                    \n",
-      "                    if booSave==True: \n",
-      "                        try:\n",
-      "                            plotName = 'plots/CC_'+data[star,0]+'_'+str(epoch)+'_'+str(cam)\n",
-      "                            print 'Attempting to save', plotName\n",
-      "                            plt.savefig(plotName)\n",
+      "#                 if np.abs(RVs[star,epoch,cam])>RVref:\n",
+      "#                 if ((RVs[star,epoch,cam]<-1000) & (RVs[star,epoch,cam]>-3000)):\n",
+      "                i+=1\n",
+      "                print i, RVs[star,epoch,cam],data[star]\n",
+      "                fileName = 'red_'+data[star,0]+'.obj'\n",
+      "                print 'Ploting fluxes from', fileName \n",
+      "                filehandler = open('obj/'+fileName, 'r')\n",
+      "                thisStar = pickle.load(filehandler)\n",
       "\n",
-      "                        except:\n",
-      "                            print 'FAILED'\n",
-      "                    if booShow==True: plt.show()\n",
-      "                    plt.close()        \n",
+      "                lambda1,flux1, lambda2,flux2, CCCurve, p, x_mask, RV = RVTools.single_RVs_CC_t0(thisStar, cam = cam, t = epoch)\n",
+      "\n",
+      "                plt.subplot(2,1,1)\n",
+      "                plt.title(thisStar.name +' '+ labels[cam]+' Original Fluxes - RV='+str(RV))\n",
+      "                plt.plot(lambda1,flux1, label='t0')\n",
+      "                plt.plot(lambda2,flux2, label='t'+str(epoch))\n",
+      "                plt.legend(loc=0)\n",
+      "                plt.subplot(2,1,2)\n",
+      "                plt.title('Cross Correlation')\n",
+      "                plt.plot(CCCurve/np.max(CCCurve), label='CC Curve')\n",
+      "                plt.plot(x_mask,RVTools.gaussian(x_mask, p[0], p[1] ), label='Gaussian fit', c='r')\n",
+      "                plt.legend(loc=0)        \n",
+      "\n",
+      "                if booSave==True: \n",
+      "                    try:\n",
+      "                        plotName = 'plots/'+str(cam+1)+'/CC_'+data[star,0]+'_'+str(epoch)+'_'+str(cam)\n",
+      "                        print 'Attempting to save', plotName\n",
+      "                        plt.savefig(plotName)\n",
+      "\n",
+      "                    except:\n",
+      "                        print 'FAILED'\n",
+      "                if booShow==True: plt.show()\n",
+      "                plt.close()        \n",
       "\n",
       "\n",
       "#                     if input('continue?')!=1:\n",
       "#                         break\n",
-      "                        \n",
       "\n",
-      "                    thisStar = None\n",
-      "                    filehandler.close()\n",
-      "                    print "
+      "\n",
+      "                thisStar = None\n",
+      "                filehandler.close()\n",
+      "                print "
      ],
      "language": "python",
      "metadata": {},
