--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7c04168c2398aad8c8a4762d6d7a36bd134d203b574f6e0bc9db276498daf629"
+  "signature": "sha256:1273570f3d61df5033d78277927ab716e353aa68543a64d72655886250be5235"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,8 +32,8 @@
       "class star():\n",
       "    \n",
       "    name = ''\n",
-      "    RA_dec = 0\n",
-      "    Dec_dec = 0\n",
+      "    RA = 0\n",
+      "    Dec = 0\n",
       "    Vmag = 0\n",
       "    \n",
       "    def __init__(self, name):\n",
@@ -51,10 +51,10 @@
       "                starInfo = fibreTable[idx][0] \n",
       "\n",
       "                self.name = starInfo.field('NAME').strip()\n",
-      "                self.RA_dec = np.rad2deg(starInfo.field('RA'))\n",
-      "                self.Dec_dec = starInfo.field('DEC')        \n",
-      "                self.RA_h, self.RA_min, self.RA_sec = toolbox.dec2sex(np.rad2deg(self.RA_dec)/15)   \n",
-      "                self.Dec_deg, self.Dec_min, self.Dec_sec = toolbox.dec2sex(np.rad2deg(self.Dec_dec))\n",
+      "                self.RA = np.rad2deg(starInfo.field('RA'))\n",
+      "                self.Dec = np.rad2deg(starInfo.field('DEC'))        \n",
+      "                self.RA_deg, self.RA_min, self.RA_sec = toolbox.dec2sex(self.RA)   \n",
+      "                self.Dec_deg, self.Dec_min, self.Dec_sec = toolbox.dec2sex(self.Dec)\n",
       "                self.Vmag = starInfo.field('MAGNITUDE')\n",
       "            \n",
       "#                 self.B = stetson_df[stetson_df.target == self.name].B.values[0]\n",
@@ -152,7 +152,10 @@
       "            print 'cam'+str(camIdx+1)+':',len(files) #,files\n",
       "            for thisFile in files:    \n",
       "                HDUList = pf.open(thisFile)\n",
-      "                self.JDs.append(HDUList[0].header['UTMJD'])\n",
+      "                e = float(HDUList[0].header['EXPOSED'])/2/24/60/60 # EXPOSED/2 in days\n",
+      "                inDate = np.hstack((HDUList[0].header['UTDATE'].split(':'),HDUList[0].header['UTSTART'].split(':'))).astype(int)\n",
+      "                MJD = toolbox.gd2jd(inDate, TZ=0) - 2400000.5 + e\n",
+      "                self.JDs.append(MJD)\n",
       "        a = np.unique(np.round(np.array(self.JDs).astype(float),3))\n",
       "        self.JDs = np.sort(a)\n",
       "        nExposures = len(a)\n",
@@ -191,7 +194,11 @@
       "                    \n",
       "                    #one time per exposure (because they are equal in all cameras)\n",
       "                    thisMJDidx = ''\n",
-      "                    thisMJDidx = np.where(self.JDs==round(float(HDUList[0].header['UTMJD']),3))[0]\n",
+      "                    e = float(HDUList[0].header['EXPOSED'])/2/24/60/60 # EXPOSED/2 in days\n",
+      "                    inDate = np.hstack((HDUList[0].header['UTDATE'].split(':'),HDUList[0].header['UTSTART'].split(':'))).astype(int)\n",
+      "                    MJD = toolbox.gd2jd(inDate, TZ=0) - 2400000.5 + e\n",
+      "\n",
+      "                    thisMJDidx = np.where(self.JDs==round(float(MJD),3))[0]\n",
       "                    if len(thisMJDidx)>0:\n",
       "                        thisMJDidx = thisMJDidx[0]\n",
       "                        print 'MJD',self.JDs[thisMJDidx]                          \n",
@@ -236,9 +243,9 @@
       "        baryVels = []\n",
       "        for j in self.JDs:\n",
       "            vh, vb = toolbox.baryvel(j+2400000+0.5) \n",
-      "            ra = star.RA_dec    #RA  in radians\n",
-      "            dec = star.Dec_dec  #Dec in radians\n",
-      "            baryVels.append((vb[0]*np.cos(dec)*np.cos(ra) + vb[1]*np.cos(dec)*np.sin(ra) + vb[2]*np.sin(dec))*1000)\n",
+      "            ra = star.RA    #RA  in degress\n",
+      "            dec = star.Dec  #Dec in degrees\n",
+      "            baryVels.append((vb[0]*np.cos(np.radians(dec))*np.cos(np.radians(ra)) + vb[1]*np.cos(np.radians(dec))*np.sin(np.radians(ra)) + vb[2]*np.sin(np.radians(dec)))*1000)\n",
       "#         print baryVels\n",
       "        self.rel_baryVels = np.array(baryVels) - baryVels[0]\n",
       "        self.abs_baryVels = np.array(baryVels)\n",
@@ -248,7 +255,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 1
     }
    ],
    "metadata": {}
