--- a/random_tests.ipynb
+++ b/random_tests.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d0f0cf25b5ccd713c95ac79c1728245eb54ed84d47f14358467988480099d9f1"
+  "signature": "sha256:98e1f825379974554f16786c6666ef1c43d9a24d7f5bae8711fb5302df3e4cc8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1761,19 +1761,19 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 39,
        "text": [
-        "u'/Users/Carlos/Documents/HERMES/reductions/HD285507_6.2/obj'"
+        "u'/Users/Carlos/Documents/HERMES/reductions'"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cd ../../47Tuc_core_6.2/"
+      "cd 47Tuc_core_6.2/"
      ],
      "language": "python",
      "metadata": {},
@@ -1786,7 +1786,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
@@ -1805,7 +1805,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -1824,13 +1824,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print thisCam.fileNames.shape\n",
+      "print thisStar.exposures\n",
       "thisCam.fileNames"
      ],
      "language": "python",
@@ -2264,18 +2264,39 @@
        "text": [
         "47Tuc_core_1arc_6.2 110\n",
         "47Tuc_core_6.2 110\n",
-        "HD1581_1arc_6.2 1\n",
+        "HD1581_1arc_6.2 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1\n",
         "HD1581_6.2 1\n",
-        "HD285507_1arc_6.2 74\n",
+        "HD285507_1arc_6.2 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "74\n",
         "HD285507_6.2 74\n",
         "m67_1arc_6.2 292\n",
-        "m67_6.2 448\n",
+        "m67_6.2 292\n",
         "NGC2477_1arc_6.2 448\n",
-        "NGC2477_6.2 448\n"
+        "NGC2477_6.2 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "448\n"
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
