--- a/run_multiplot.ipynb
+++ b/run_multiplot.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c4bb90777a26facd4afe931e500c01e061124fddd0e6390ce3b85c4c5478a83c"
+  "signature": "sha256:b97a9c4e9e77f35f99c74990d3848cb4d00f354d1caa92f35394eecc4387d8be"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,12 +14,13 @@
      "input": [
       "import numpy as np\n",
       "import pylab as plt\n",
-      "import sys"
+      "import sys\n",
+      "from matplotlib import gridspec"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -33,21 +34,20 @@
       "        ind = event.ind\n",
       "        x_point = np.take(xdata, ind)[0]\n",
       "        y_point = np.take(ydata, ind)[0]\n",
-      "#         print\n",
-      "        print data[ind]\n",
-      "#         ax1.clear()\n",
-      "#         ax1.plot(a, b, 'o', picker=5, c='b')\n",
+      "        print' Selected:', data[ind[0]]\n",
+      "        print\n",
       "        ax1.plot(FIBRE[ind[0]], SNR[ind[0]], 'o', picker=5, c='r')\n",
       "        ax2.plot(FIBRE[ind[0]], RV[ind[0]], 'o', picker=5, c='r')\n",
       "        ax4.plot(RV[ind[0]], SNR[ind[0]], 'o', picker=5, c='r')\n",
+      "        ax5.plot(RA[ind[0]], DEC[ind[0]], 'o', picker=5, c='r')\n",
       "        plt.draw()\n",
-      "#         plt.close()\n",
+      "\n",
       "        \n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 97
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -63,45 +63,64 @@
       "    SNRs = np.load('npy/SNRs.npy')\n",
       "    #     JDs=np.load('npy/JDs.npy')\n",
       "    #     sigmas=np.load('npy/sigmas.npy')\n",
-      "\n",
+      "    \n",
+      "    RVClip = 1e9\n",
+      "    if len(sys.argv)>3:\n",
+      "        RVClip = sys.argv[3]\n",
       "        \n",
       "    FIBRE = data[:,2].astype(float) #fibres\n",
+      "    RA = data[:,3].astype(float) #RA\n",
+      "    DEC = data[:,4].astype(float) #Dec\n",
       "    RV = RVs[:,epoch,cam] #RV\n",
       "    SNR = SNRs[:,epoch,cam] #SNR\n",
       "    # baryVel = baryVels[:,epoch,cam] #baryVels\n",
       "    maxSNRs = np.nanmax(SNRs,axis=(0,1))\n",
-      "\n",
-      "\n",
+      "    \n",
+      "    RVfilter = np.abs(RV)>int(RVClip)\n",
+      "    RV[RVfilter]=np.nan\n",
       "\n",
       "    fig = plt.figure()\n",
+      "    \n",
+      "    gs = gridspec.GridSpec(3, 4)\n",
       "\n",
-      "    ax1 = fig.add_subplot(311) #SNRs\n",
+      "#     ax1 = fig.add_subplot(321) #SNRs\n",
+      "    ax1 = fig.add_subplot(gs[0,0:2]) #SNRs\n",
       "    ax1.plot(FIBRE, SNR, 'o', label = 'SNR', color = 'b', picker=5)\n",
       "    plt.xlabel('Fibre #')\n",
       "    plt.ylabel('SNR')\n",
-      "    plt.legend()\n",
+      "#     plt.legend()\n",
       "\n",
       "\n",
-      "    ax2= fig.add_subplot(312) #RVs\n",
+      "#     ax2= fig.add_subplot(323) #RVs\n",
+      "    ax2= fig.add_subplot(gs[1,0:2]) #RVs\n",
       "    ax2.plot(FIBRE, RV, 'o', label = 'RV', color = 'b', picker=5)\n",
       "    plt.xlabel('Fibre #')\n",
       "    plt.ylabel('RV [m/s]')\n",
-      "    plt.legend()\n",
+      "#     plt.legend()\n",
       "\n",
-      "    ax3 = fig.add_subplot(313) #Histogram\n",
-      "    hist = np.histogram(RV,50)\n",
+      "#     ax3 = fig.add_subplot(322) #Histogram\n",
+      "    ax3 = fig.add_subplot(gs[2,0:2]) #Histogram\n",
+      "    hist = np.histogram(RV[~np.isnan(RV)],50)\n",
       "    ax3.bar(hist[1][1:],hist[0], width = (hist[1][-2]-hist[1][-1]), color = 'k', alpha = 0.5)\n",
       "    ax3.set_ylabel('Counts')\n",
       "    ax3.set_xlabel('RV [m/s]')\n",
       "\n",
+      "    \n",
+      "    \n",
       "    ax4 = ax3.twinx()\n",
-      "    # ax4.scatter(RV,SNR, c='b', s=50)\n",
+      "#     # ax4.scatter(RV,SNR, c='b', s=50)\n",
       "    ax4.plot(RV, SNR, 'o', color = 'b', picker=5)\n",
-      "    ax4.plot([baryVels[epoch], baryVels[epoch]], [0, maxSNRs[cam]], 'r', lw=2)\n",
+      "    ax4.plot([baryVels[epoch], baryVels[epoch]], [0, maxSNRs[cam]], 'g', lw=2)\n",
       "    ax4.plot([0, 0], [0, maxSNRs[cam]], 'k--', lw=2)\n",
       "    ax4.set_ylabel('SNR')\n",
       "    ax4.set_ylim(0, maxSNRs[cam])\n",
       "\n",
+      "#     ax5= fig.add_subplot(324) #RVs\n",
+      "    ax5= fig.add_subplot(gs[:,2:]) #RVs\n",
+      "    ax5.plot(RA, DEC, 'o', label = 'RV', color = 'b', picker=5)\n",
+      "    ax5.grid(True)\n",
+      "    plt.xlabel('Dec [deg]')\n",
+      "    plt.ylabel('RA [deg]')\n",
       "\n",
       "    plt.tight_layout()\n",
       "\n",
@@ -117,31 +136,17 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "[12]\n",
-        "\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[17]\n",
-        "\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[3]\n"
+       "ename": "ValueError",
+       "evalue": "invalid literal for int() with base 10: '-f'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-4-246d7198203e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mcam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mepoch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'npy/data.npy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '-f'"
        ]
       }
      ],
-     "prompt_number": 99
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
