--- a/Find_SB9_Targets.ipynb
+++ b/Find_SB9_Targets.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:bb75cf8731cc5209f13cba2cf42b4002ce8ab69f76a968b975f7dd7295dd8ac1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +20,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -30,7 +31,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -205,7 +206,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -244,7 +245,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 4,
        "text": [
         "<class 'pandas.core.frame.DataFrame'>\n",
         "Int64Index: 3994 entries, 0 to 3993\n",
@@ -270,7 +271,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -305,7 +306,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Candidates in selection 3\n"
+        "Candidates in selection "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3\n"
        ]
       },
       {
@@ -401,7 +409,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 5,
        "text": [
         "      Dec1  Dec2   Dec3    No  RA1  RA2     RA3 SpecType1  Vmag1     K1  \\\n",
         "56     -65    28   4.91    40    0   42  28.373       F6V  5.393  26.10   \n",
@@ -415,7 +423,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
