--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:98860ece9e03604f696b3291abbd01ed17e19583fe7a5d6b10ab92be1db775c3"
+  "signature": "sha256:778113514284ab8a3574a57437b9bbc36e11086dd99723b7f09c287e4f76b262"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -172,7 +172,7 @@
      "collapsed": false,
      "input": [
       "#Create cross correlation curves wrt epoch 0\n",
-      "def RVs_CC_t0(thisStar, xDef = 1, CCReferenceSet = 0, printDetails=False, corrHWidth=10):\n",
+      "def RVs_CC_t0(thisStar, xDef = 1, CCReferenceSet = 0, printDetails=False, corrHWidth=10, medianRange = 0):\n",
       "\n",
       "    print '#############################################################################################################'\n",
       "    print '#############################################################################################################'\n",
@@ -196,14 +196,14 @@
       "            CCReferenceSet = 0\n",
       "            \n",
       "            \n",
-      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[CCReferenceSet], thisCam.red_fluxes[CCReferenceSet], thisCam)\n",
+      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[CCReferenceSet], thisCam.red_fluxes[CCReferenceSet], thisCam, medianRange=medianRange)\n",
       "        print 'Reference wl,fl sum', np.nansum(lambda1), np.nansum(flux1)\n",
       "        print \n",
       "        \n",
       "        plts = 0    \n",
       "        for i, JD in enumerate(thisStar.exposures.JDs):\n",
       "            print 'Set,MJD',i,JD\n",
-      "            lambda2, flux2 = clean_flux(thisCam.wavelengths[i], thisCam.red_fluxes[i], thisCam)\n",
+      "            lambda2, flux2 = clean_flux(thisCam.wavelengths[i], thisCam.red_fluxes[i], thisCam, medianRange=medianRange)\n",
       "            print 'This wl,fl sum', np.nansum(lambda2), np.nansum(flux2)\n",
       "\n",
       "            if validDates[i]==True:\n",
@@ -300,16 +300,15 @@
      "collapsed": false,
      "input": [
       "#Create cross correlation curves wrt epoch 0\n",
-      "def single_RVs_CC_t0(thisStar, cam = 0, t = 0, corrHWidth =10):\n",
+      "def single_RVs_CC_t0(thisStar, cam = 0, t = 0, corrHWidth =10, xDef = 1):\n",
       "\n",
       "        print 'Camera',cam, '- t0 wrt t',t\n",
       "        \n",
       "        thisCam = thisStar.exposures.cameras[cam]\n",
       "            \n",
-      "            \n",
-      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[0], thisCam.red_fluxes[0], thisCam)\n",
+      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[0], thisCam.red_fluxes[0], thisCam, medianRange=5, xDef=xDef )\n",
       "        \n",
-      "        lambda2, flux2 = clean_flux(thisCam.wavelengths[t], thisCam.red_fluxes[t], thisCam)\n",
+      "        lambda2, flux2 = clean_flux(thisCam.wavelengths[t], thisCam.red_fluxes[t], thisCam, medianRange=5, xDef=xDef)\n",
       "        CCCurve = []\n",
       "        CCCurve = signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
       "        corrMax = np.where(CCCurve==max(CCCurve))[0][0]\n",
@@ -324,11 +323,14 @@
       "\n",
       "\n",
       "            mid_px = thisCam.wavelengths.shape[1]/2\n",
-      "            dWl = (thisCam.wavelengths[t,mid_px+1]-thisCam.wavelengths[t,mid_px]) / thisCam.wavelengths[t,mid_px]\n",
+      "            dWl = (thisCam.wavelengths[t,mid_px+1]-thisCam.wavelengths[t,mid_px]) / thisCam.wavelengths[t,mid_px]/xDef\n",
       "            RV = dWl * pixelShift * constants.c \n",
       "            print 'RV',RV\n",
       "        else:\n",
       "            p=RV=0\n",
+      "            \n",
+      "#         print 'HERE:'\n",
+      "\n",
       "        return lambda1,flux1, lambda2,flux2, CCCurve, p, x_mask, RV \n",
       "        \n"
      ],
